base/src/test/resources/failure/implicit/refparo9.aya.txt
In file $FILE:4:23 ->

  2 |   open data Unit : Type | unit
  3 |   def foo (x : Unit) : Unit => x
  4 |   def bar : Unit => foo {unit}
    |                          ^--^

Error: Unexpected implicit argument `{unit}`

1 error(s), 0 warning(s).
What are you doing?
